# Quick-Module

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
quick_module_app/: hooks.py  modules.txt
quick_module_app/config/: desktop.py  docs.py
quick_module_app/quick_module/doctype/quick_sales_invoice/: quick_sales_invoice.js  quick_sales_invoice.json  quick_sales_invoice.py  quick_sales_invoice_list.js  test_quick_sales_invoice.py
quick_module_app/quick_module/doctype/quick_sales_invoice_item/: quick_sales_invoice_item.json  quick_sales_invoice_item.py
